--- a/docs/view/overview/installation.html
+++ b/docs/view/overview/installation.html
@@ -241,10 +241,10 @@ body.marp-vscode blockquote {
 <style>@import url(../css/index.css);</style> 
 <!-- <script src='../../js/steps.js'></script> -->
 <h1 id="installation">Installation</h1>
-<p>With the latest <code>bun</code> installed, create a new project with the template creator <code>@reactful/create@latest</code>, the entry code starts with server render.</p>
-<section cols='4:5'>
-<pre><code class="language-ps"><span class="hljs-variable">$</span> bunx @reactful/create@latest
-- blank=<span class="hljs-number">0</span> | basic=<span class="hljs-number">1</span> | board=<span class="hljs-number">3</span>? <span class="hljs-number">0</span>
+<p>With the latest <code>bun</code> installed, create a new project with the template creator <code>@c0d3x/reactful/create@latest</code>, the entry code starts with server render.</p>
+<section cols='3:5'>
+<pre><code class="language-ps"><span class="hljs-variable">$</span> bunx @c0d3x/reactful/create
+- none=<span class="hljs-number">0</span>|init=<span class="hljs-number">1</span>|full=<span class="hljs-number">3</span>? <span class="hljs-number">3</span>
 - project name? MyProject
 - install? (Y/n) y
 - <span class="hljs-built_in">start</span>? (Y/n) y
@@ -254,8 +254,8 @@ body.marp-vscode blockquote {
 
 running at localhost:<span class="hljs-number">3000</span>
 </code></pre>
-<pre><code class="language-typescript"><span class="hljs-keyword">import</span> { launch } <span class="hljs-keyword">from</span> <span class="hljs-string">&#x27;@reactful/server&#x27;</span>
-<span class="hljs-keyword">import</span> { client } <span class="hljs-keyword">from</span> <span class="hljs-string">&#x27;@reactful/client&#x27;</span>
+<pre><code class="language-typescript"><span class="hljs-keyword">import</span> { launch } <span class="hljs-keyword">from</span> <span class="hljs-string">&#x27;@c0d3x/reactful/server&#x27;</span>
+<span class="hljs-keyword">import</span> { client } <span class="hljs-keyword">from</span> <span class="hljs-string">&#x27;@c0d3x/reactful&#x27;</span>
 
 <span class="hljs-keyword">await</span> <span class="hljs-title function_">launch</span>().<span class="hljs-title function_">server</span>(<span class="hljs-string">&#x27;#root&#x27;</span>)
 
