--- a/docs/view/preview/serving.html
+++ b/docs/view/preview/serving.html
@@ -244,8 +244,8 @@ body.marp-vscode blockquote {
 <p>hybrid rendering • server components • partial hydration • web apis • extended html • error handling • markdown support</p>
 </blockquote>
 <h2 id="server-launcher">Server launcher</h2>
-<p>Reactful IoC container for <a onclick='goto("review/reactive.html#global-store")'>global store</a>, <a onclick='goto("review/injection.html#error-components")'>error components</a> and <a onclick='goto("review/directive.html#props-directives")'>props directives</a>.</p>
-<pre><code class="language-ts"><span class="hljs-keyword">import</span> { launch } <span class="hljs-keyword">from</span> <span class="hljs-string">&#x27;reactful/server&#x27;</span>
+<p>Reactful IoC container for <a onclick='goto("review/reactive.html#global-store")'>global store</a>, <a onclick='goto("review/injection.html#error-components")'>error components</a> and <a onclick='goto("review/directive.html#props-directives")'>props handlers</a>.</p>
+<pre><code class="language-ts"><span class="hljs-keyword">import</span> { launch } <span class="hljs-keyword">from</span> <span class="hljs-string">&#x27;@c0d3x/reactful/server&#x27;</span>
 <span class="hljs-keyword">import</span> { directive } <span class="hljs-keyword">from</span> <span class="hljs-string">&#x27;./directives&#x27;</span>
 <span class="hljs-keyword">import</span> { decorator } <span class="hljs-keyword">from</span> <span class="hljs-string">&#x27;./decorators&#x27;</span>
 
@@ -268,8 +268,8 @@ body.marp-vscode blockquote {
 <h2 id="seo-decorator">SEO decorator</h2>
 <p>Function decorator overloads for SEO with typed metatags.</p>
 <aside cols='2'>
-<pre><code class="language-tsx"><span class="hljs-keyword">import</span> { seo } <span class="hljs-keyword">from</span> <span class="hljs-string">&#x27;@reactful/client&#x27;</span>
-<span class="hljs-keyword">import</span> { <span class="hljs-title class_">MetaTag</span> } <span class="hljs-keyword">from</span> <span class="hljs-string">&#x27;@reactful/client&#x27;</span>
+<pre><code class="language-tsx"><span class="hljs-keyword">import</span> { seo } <span class="hljs-keyword">from</span> <span class="hljs-string">&#x27;@c0d3x/reactful&#x27;</span>
+<span class="hljs-keyword">import</span> { <span class="hljs-title class_">MetaTag</span> } <span class="hljs-keyword">from</span> <span class="hljs-string">&#x27;@c0d3x/reactful&#x27;</span>
 
 @<span class="hljs-title function_">seo</span>(<span class="hljs-string">&#x27;title&#x27;</span>, <span class="hljs-string">&#x27;description&#x27;</span>) 
 <span class="hljs-keyword">export</span> <span class="hljs-keyword">function</span> <span class="hljs-title function_">Hi</span>(<span class="hljs-params">props</span>) {
