--- a/docs/introduction/creation.css
+++ b/docs/introduction/creation.css
@@ -74,3 +74,6 @@ pre+pre { margin-top: 20px; }
 #logo:hover {
    filter: drop-shadow(0 0 1px white) drop-shadow(0 0 2px wheat) drop-shadow(0 0 3px black);
 }
+
+th { font-size: 1.1rem; }
+th * { background:transparent !important }
