--- a/docs/view/preview/routing.html
+++ b/docs/view/preview/routing.html
@@ -293,7 +293,7 @@ body.marp-vscode blockquote {
 <h2 id="props-routing">Props routing</h2>
 <p><a onclick='goto("review/structure.html#props-routing")'>Route directives</a> with conditional <code>[route]</code> and clickable router <code>[link]</code>.</p>
 <pre><code class="language-tsx"><span class="hljs-keyword">export</span> <span class="hljs-keyword">default</span> <span class="hljs-keyword">const</span> <span class="hljs-title function_">Menu</span> = props =&gt; <span class="language-xml"><span class="hljs-tag">&lt;&gt;</span>
-   <span class="hljs-tag">&lt;<span class="hljs-name">div</span> <span class="hljs-attr">link</span>=<span class="hljs-string">&#x27;/main&#x27;</span>&gt;</span>Main<span class="hljs-tag">&lt;/<span class="hljs-name">div</span>&gt;</span>     <span class="hljs-comment">&lt;!-- clickable router --&gt;</span>   
+   <span class="hljs-tag">&lt;<span class="hljs-name">div</span> <span class="hljs-attr">link</span>=<span class="hljs-string">&#x27;/main&#x27;</span>&gt;</span>Main<span class="hljs-tag">&lt;/<span class="hljs-name">div</span>&gt;</span>     <span class="hljs-comment">&lt;!-- declarative router --&gt;</span>   
    <span class="hljs-tag">&lt;<span class="hljs-name">main</span> <span class="hljs-attr">route</span>=<span class="hljs-string">&#x27;/main&#x27;</span>&gt;</span>...<span class="hljs-tag">&lt;/<span class="hljs-name">main</span>&gt;</span>   <span class="hljs-comment">&lt;!-- conditional render --&gt;</span>
 <span class="hljs-tag">&lt;/&gt;</span></span>
 </code></pre>
