--- a/docs/view/preview/routing.html
+++ b/docs/view/preview/routing.html
@@ -236,10 +236,9 @@ body.marp-vscode blockquote {
         
         </head>
         <body class="vscode-body vscode-dark">
-            <script src='../js/index.js'></script>
-<style>@import url(../css/index.css);</style> 
+            <style>@import url(routing.css);</style>
+<style>@import url(../@assets/css/index.css);</style> 
 <style>
-   @import url(routing.css);
    table { margin: 0px 30px !important; zoom:0.95; }
    table th { font-weight:700; border-bottom-style: dashed }
 </style> 
