--- a/docs/@assets/css/navigates.css
+++ b/docs/@assets/css/navigates.css
@@ -19,12 +19,11 @@ nav li {
 
 nav li label {
    display: block;
-   color: silver;
+   color: dimgrey;
    border-bottom: solid 1px #555;
    font-family: var(--text-font), monospace;
    letter-spacing: 0px;
    font-size: 0.9rem;
-   font-weight: 300;
    font-weight: 500;
    padding-bottom: 10px;
    width: 100%;
