--- a/docs/@assets/css/codings.css
+++ b/docs/@assets/css/codings.css
@@ -1,4 +1,5 @@
 pre {
+   zoom: 99%;
    font-size:1rem;
    font-weight: 100;
    overflow: hidden !important;
@@ -14,8 +15,8 @@ p code {
 }
 
 pre code {
-   transform: scaleX(0.96) !important;   
-   line-height: 17px;
+   transform: scaleX(0.95) !important;   
+   line-height: 19px;
 }
 
 pre:not(.hljs),
