doc: example enhancement

--- a/docs/introduction/todo-list.css
+++ b/docs/introduction/todo-list.css
@@ -3,3 +3,21 @@
 #launch pre {
    margin: 15px 0 !important;
 }
+
+h5 {
+   font-family: var(--menu-font);
+   font-weight: normal !important;
+   background: #222;
+   border-radius: 5px;
+   border: dotted 2px #555;
+   display: block;
+   text-align: center;
+   color: silver;
+   padding: 5px 10px;
+   margin: 0 0 0 auto;
+   margin-top: 20px;
+   margin-right: 10px;
+   margin-bottom: -35px;
+   /* margin-left: 65%; */
+   width: 150px;
+}
