--- a/docs/main.css
+++ b/docs/main.css
@@ -82,7 +82,7 @@ pre+pre { margin-top: 20px; }
 
 #main {
    padding: 0;
-   padding: 10px;
+   padding: 0px 15px;
    height: 100%;
    width: 700px;
    margin-left: 170px;
