--- a/docs/view/overview/introduction.html
+++ b/docs/view/overview/introduction.html
@@ -250,8 +250,8 @@ table td { padding:2px 7px;  }
 }
 </style> 
 <h1 id="introduction">Introduction</h1>
-<center>
-<p>Reactful is a fullstack React framework with innovative stateful handler, minimalist design approach and comprehensive framework features.</p>
+<center style='margin: 0 40px'>
+<p>Reactful is a fullstack React meta-framework with innovative stateful design, advanced patterns and comprehensive framework features.</p>
 <table>
 <thead>
 <tr>
@@ -287,9 +287,9 @@ table td { padding:2px 7px;  }
 </tbody>
 </table>
 </center>
-<center>
+<center style='margin:0 55px'>
 <h2 upper smart-object>reactive objects</h2>
-<p>Smart objects concept is a self-rendering state feature that avoids all React boilerplate code with classes, hooks, imports, calls, etc in React state managenent.</p>
+<p>Reactive objects are self-rendering state feature that encapsulates all boilerplate code in stateful React.</p>
 </center>
 <section cols='3' divs><aside right>
 <h2 id="property-handler">Property handler</h2>
